# BlogWriter---CrewAI

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
blogwriter/: .env  README.md  pyproject.toml  resultado_artigo.txt
blogwriter/src/blogwriter/: crew.py  main.py
blogwriter/src/blogwriter/config/: agents.yaml  tasks.yaml
blogwriter/src/blogwriter/tools/: custom_tool.py
